--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,16 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "resolutions": {
+    "jquery": "^3.2.1"
+  },
+  "dependencies": {
+    "angular": "^1.6.4",
+    "jquery": "3.2.1",
+    "angular-material": "^1.1.4",
+    "angular-route": "^1.6.4",
+    "angular-bootstrap": "^2.5.0",
+    "ui-bootstrap": "^2.5.0"
+  }
 }
