--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,8 @@
     "angular-material": "^1.1.4",
     "angular-route": "^1.6.4",
     "angular-bootstrap": "^2.5.0",
-    "ui-bootstrap": "^2.5.0"
+    "ui-bootstrap": "^2.5.0",
+    "bootstrap": "^3.3.7",
+    "smartmenus": "^1.0.1"
   }
 }
