--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "angular-bootstrap": "^2.5.0",
     "ui-bootstrap": "^2.5.0",
     "bootstrap": "^3.3.7",
-    "smartmenus": "^1.0.1"
+    "smartmenus": "^1.0.1",
+    "angular-responsive-tables": "^0.4.4"
   }
 }
