working db query

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "tests"
   ],
   "resolutions": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "angular": "^1.4.8"
   },
   "dependencies": {
     "angular": "^1.6.4",
@@ -32,6 +33,7 @@
     "ui-bootstrap": "^2.5.0",
     "bootstrap": "^3.3.7",
     "smartmenus": "^1.0.1",
-    "angular-responsive-tables": "^0.4.4"
+    "angular-responsive-tables": "^0.4.4",
+    "angular-resource": "^1.6.5"
   }
 }
